[gd_scene load_steps=3 format=2]

[ext_resource path="res://ASSETS/dice_01.png" type="Texture" id=1]
[ext_resource path="res://Dado/Dado.gd" type="Script" id=2]

[node name="Dado" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -1778.0
margin_bottom = -942.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lado1" type="TextureButton" parent="."]
margin_right = 133.0
margin_bottom = 133.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="pressed" from="Lado1" to="." method="_on_Lado1_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
